# QGeoView

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  HOWTO.md  QGVCamera_8h_source.html  QGVDrawItem_8h_source.html  QGVGlobal_8h_source.html  QGVIcon_8h_source.html  QGVImage_8h_source.html  QGVItem_8h_source.html  QGVLayerBDGEx_8h_source.html  QGVLayerBing_8h_source.html  QGVLayerGoogle_8h_source.html  QGVLayerOSM_8h_source.html  QGVLayerTilesOnline_8h_source.html  QGVLayerTiles_8h_source.html  QGVLayer_8h_source.html  QGVMapQGItem_8h_source.html  QGVMapQGView_8h_source.html  QGVMapRubberBand_8h_source.html  QGVMap_8h_source.html  QGVProjectionEPSG3857_8h_source.html  QGVProjection_8h_source.html  QGVUtils_8h_source.html  QGVWidgetCompass_8h_source.html  QGVWidgetScale_8h_source.html  QGVWidgetText_8h_source.html  QGVWidgetZoom_8h_source.html  QGVWidget_8h_source.html  QGeoView.pro  README.md  ReleaseNotes.md  annotated.html  classQGVCameraActions-members.html  classQGVCameraActions.html  classQGVCameraAnimation-members.html  classQGVCameraAnimation.html  classQGVCameraFlyAnimation-members.html  (+63 more)
.github/workflows/: build-events.yaml  build.yaml  cmake.yaml  doxygen.yaml  pre-commit.yaml
demo/: CMakeLists.txt  demo.pro  demoitem.cpp  demoitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectordialog.cpp  selectordialog.h
demo/samples/: background.cpp  background.h  customtiles.cpp  customtiles.h  ellipse.cpp  ellipse.h  flags.cpp  flags.h  items.cpp  items.h  mouse.cpp  mouse.h  mytile.cpp  mytile.h  mytiles.cpp  mytiles.h  placemark.cpp  placemark.h  rectangle.cpp  rectangle.h  utilities.cpp  utilities.h  waveanimation.cpp  waveanimation.h  widgets.cpp  widgets.h
lib/: CMakeLists.txt  lib.pri  lib.pro
lib/include/QGeoView/: QGVCamera.h  QGVDrawItem.h  QGVGlobal.h  QGVImage.h  QGVItem.h  QGVLayer.h  QGVLayerBDGEx.h  QGVLayerBing.h  QGVLayerGoogle.h  QGVLayerOSM.h  QGVLayerTiles.h  QGVLayerTilesOffline.h  QGVLayerTilesOnline.h  QGVMap.h  QGVMapActions.h  QGVMapQGItem.h  QGVMapQGView.h  QGVMapRubberBand.h  QGVProjection.h  QGVProjectionEPSG3857.h  QGVUtils.h  QGVWidget.h  QGVWidgetCompass.h  QGVWidgetScale.h  QGVWidgetText.h  QGVWidgetZoom.h
lib/include/QGeoView/Raster/: QGVIcon.h  QGVImage.h
lib/include/QGeoView/utils/: DistanceUnits.hpp
lib/src/: QGVCamera.cpp  QGVDrawItem.cpp  QGVGlobal.cpp  QGVImage.cpp  QGVItem.cpp  QGVLayer.cpp  QGVLayerBDGEx.cpp  QGVLayerBing.cpp  QGVLayerGoogle.cpp  QGVLayerOSM.cpp  QGVLayerTiles.cpp  QGVLayerTilesOffline.cpp  QGVLayerTilesOnline.cpp  QGVMap.cpp  QGVMapActions.cpp  QGVMapQGItem.cpp  QGVMapQGView.cpp  QGVMapRubberBand.cpp  QGVProjection.cpp  QGVProjectionEPSG3857.cpp  QGVUtils.cpp  QGVWidget.cpp  QGVWidgetCompass.cpp  QGVWidgetScale.cpp  QGVWidgetText.cpp  QGVWidgetZoom.cpp
lib/src/Raster/: QGVIcon.cpp  QGVImage.cpp
lib/src/utils/: DistanceUnits.cpp
market-place/: description.md  manifest.json
samples/: lib.pri  shared.pri
samples/10000/: 10000.pro  CMakeLists.txt  mainwindow.cpp  mainwindow.h
samples/background/: CMakeLists.txt  background.pro  main.cpp  mainwindow.cpp  mainwindow.h
samples/basic/: CMakeLists.txt  basic.pro  mainwindow.cpp  mainwindow.h
samples/camera-actions/: CMakeLists.txt  camera-actions.pro  mainwindow.cpp  mainwindow.h
samples/custom-tiles/: CMakeLists.txt  custom-tiles.pro  mainwindow.cpp  mainwindow.h  mytile.cpp  mytile.h  mytiles.cpp  mytiles.h
samples/debug/: CMakeLists.txt  debug.pro  mainwindow.cpp  mainwindow.h
samples/drag-and-drop/: CMakeLists.txt  drag-and-drop.pro  mainwindow.cpp  mainwindow.h
samples/flags/: CMakeLists.txt  flags.pro  mainwindow.cpp  mainwindow.h
samples/fun/: CMakeLists.txt  fun.pro  mainwindow.cpp  mainwindow.h  placemark.cpp  placemark.h  waveanimation.cpp  waveanimation.h
samples/gdal-shapefile/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  polygon.cpp  polygon.h
samples/layers/: CMakeLists.txt  layers.pro  main.cpp  mainwindow.cpp  mainwindow.h
samples/mouse-actions/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mouse-actions.pro
samples/moving-objects/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  moving-objects.pro
samples/performance/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  performance.pro
samples/raster/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  raster.pro
samples/shapefile/: CMakeLists.txt  polygon.cpp
samples/shared/: CMakeLists.txt  helpers.cpp  helpers.h  placemarkcircle.cpp  placemarkcircle.h  rectangle.cpp  rectangle.h  shared.pri  shared.pro
samples/widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  widgets.pro
scripts/: add_header.py  clang_format_all.py  legacy_head.txt  qgv_gpl_head.txt  qgv_lgpl_head.txt
search/: all_0.js  all_1.js  classes_0.js  classes_1.js  searchdata.js
