cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(QGeoView LANGUAGES C CXX)

option(BUILD_EXAMPLES "Build examples" ON)

add_subdirectory(lib)
if (${BUILD_EXAMPLES})
  message(STATUS "Enabled building of examples")
  add_subdirectory(samples/shared)
  add_subdirectory(samples/basic)
  add_subdirectory(samples/background)
  add_subdirectory(samples/widgets)
  add_subdirectory(samples/flags)
  add_subdirectory(samples/layers)
  add_subdirectory(samples/fun)
  add_subdirectory(samples/10000)
  add_subdirectory(samples/debug)
  add_subdirectory(samples/performance)
  add_subdirectory(samples/custom-tiles)
  add_subdirectory(samples/moving-objects)
  add_subdirectory(samples/mouse-actions)
  add_subdirectory(samples/camera-actions)
else ()
  message(STATUS "Disabled building of examples")
endif ()
